# hai-cli

./: 404.html  Cargo.toml  Cross.toml  LICENSE  README.md  index.html  sitemap.xml
.github/workflows/: ci.yml
api/: index.html
api_spec/: account.stone  asset.stone  asset_pool.stone  bot.stone  common.stone  messaging.stone  notify.stone  stone_cfg.stone  task.stone  web.stone
cast/: hai-asset-create.cast  hai-hai-tool.cast  hai-hi.cast  hai-load-image.cast  hai-load-url.cast  hai-multi-ai.cast  hai-py-tool.cast  hai-send-email.cast  hai-sh-tool.cast  hai-syntax-highlight.cast  hai-task-codereview.cast  hai-task-weather.cast
cli/incognito/: index.html
cli/run-and-exit/: index.html
cli/subcommands-and-options/: index.html
cli/using-with-vim/: index.html
cli/websocket-queue/: index.html
config/: index.html
doc-site/: mkdocs.yml
doc-site/docs/: api.md  config.md  index.md
doc-site/docs/cast/: hai-asset-temp.cast  hai-fn-py-tool.cast  hai-pyuv-tool.cast
doc-site/docs/cli/: incognito.md  run-and-exit.md  subcommands-and-options.md  using-with-vim.md  websocket-queue.md
doc-site/docs/features/: api.md  assets.md  incognito.md  llm-models.md  tasks.md  tools.md
doc-site/docs/getting-started/: api-keys.md  getting-help.md  installation.md
doc-site/docs/repl/: account.md  assets.md  basics.md  llm-models.md  mcps.md  send-email.md  stdlib.md  tasks.md  tools.md  web-search.md
docs/: index.md  mkdocs.yml
docs/docs/: index.md
getting-started/api-keys/: index.html
getting-started/getting-help/: index.html
getting-started/installation/: index.html
repl/account/: index.html
repl/assets/: index.html
repl/basics/: index.html
repl/llm-models/: index.html
repl/mcps/: index.html
repl/send-email/: index.html
repl/stdlib/: index.html
repl/tasks/: index.html
repl/tools/: index.html
repl/web-search/: index.html
scripts/: hai-installer.sh  linux-build.sh  macos-build.sh
search/: search_index.json
src/: asset_async_writer.rs  asset_cache.rs  asset_editor.rs  asset_helper.rs  asset_reader.rs  asset_sync.rs  chat.rs  clipboard.rs  cmd.rs  cmd_processor.rs  config.rs  crypt.rs  ctrlc_handler.rs  db.rs  line_editor.rs  loader.rs  main.rs  printer.rs  repl_remote.rs  session.rs  term.rs  term_color.rs  tool.rs
src/ai_provider/: anthropic.rs  mod.rs  ollama.rs  openai.rs  tool_schema.rs  util.rs  void.rs
src/api/: client.rs
src/api/types/: account.rs  asset.rs  bot.rs  common.rs  messaging.rs  mod.rs  notify.rs  task.rs  web.rs
src/feature/: asset_app.rs  asset_crypt.rs  asset_keyring.rs  chat_store.rs  gateway.rs  haibot.rs  haivar.rs  html_tool.rs  mcp.rs  mod.rs  queue_listen.rs  save_chat.rs
tests/: cli.rs  test-task.toml
ttyd_demo/: Dockerfile  README.md
