[package]
name = "hai-cli"
version = "1.23.0"
authors = ["Ken Elkabany <ken@elkabany.com>"]
edition = "2024"
license = "Apache-2.0"
description = "A CLI with a REPL for hackers using LLMs."
documentation = "https://github.com/braincore/hai-cli/blob/master/README.md"
repository = "https://github.com/braincore/hai-cli"
readme = "README.md"
exclude = [
    "api_spec/",
    "doc-site/",
    "scripts/",
    "ttyd_demo/",
]

[[bin]]
name = "hai"
path = "src/main.rs"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["getrandom"] }
ansi-width = "0.1.0"
ansi_colours = "1.2.3"
argon2 = "0.5.3"
atty = "0.2.14"
base64 = "0.22.1"
bytes = "1.8.0"
chrono = "0.4.39"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.2.0"
copypasta = "0.10.1"
copypasta-ext = "0.4.4"
crossterm = "0.28.1"
ctrlc = "3.4.5"
dirs = "5.0.1"
dom_smoothie = "0.10.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
filetime = "0.2.26"
futures = "0.3.31"
futures-util = "0.3.31"
glob = "0.3.2"
hex = "0.4.3"
hkdf = "0.12.4"
htmd = "0.1.6"
human-sort = "0.2.2"
image = "0.25.4"
is_executable = "1.0.4"
jaq-core = "1.2.1"
jaq-interpret = "1.2.1"
jaq-parse = "1.0.2"
jaq-std = "1.2.1"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }
markdown = "1.0.0-alpha.23"
mdast_util_to_markdown = "0.0.1"
mime_guess = "2.0.5"
notify = { version = "8.0.0", features = ["macos_fsevent"] }
nu-ansi-term = "0.50.1"
num-format = "0.4.4"
open = { version = "5.3.2", features = ["shellexecute-on-windows"] }
rand = "0.9.2"
rand_core = "0.9.5"
reedline = "0.44.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls", "stream"] }
rpassword = "7.3.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
semver = "1.0.25"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
shellexpand = "3.1.0"
tempfile = "3.19.1"
terminal_size = "0.4.0"
tiktoken-rs = "0.6.0"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots"] }
tokio-util = "0.7.13"
toml = "0.8.19"
toml_edit = "0.22.22"
two-face = { version = "0.4.3", default-features = false, features = ["syntect-default-fancy"] }
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["std", "v7"] }
viuer = { version = "0.10.0", features = ["icy_sixel"] }
which = "8.0.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zeroize = "1.8.2"

[target.'cfg(not(target_os = "windows"))'.dependencies]
xattr = "1.5.0"

[profile.release]
strip = true
lto = "fat"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

